@@ -30,6 +30,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   that specify an offset for the first field.
   [bug introduced with the --debug feature in coreutils-8.6]
 
+  tail -F now works with initially non existent files on a remote file system.
+  [bug introduced in coreutils-7.5]
+
 ** New commands
 
   base32 is added to complement the existing base64 command,
